--- a/MultipleActivities/app/src/main/res/values/strings.xml
+++ b/MultipleActivities/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_image_viewer">ImageViewerActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_image_view">ImageViewActivity</string>
 </resources>
